# Polymarket-Kalshi-Arbitrage-bot

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  env.example  fly-entrypoint.sh  fly.toml
captures/session_2026-01-19_22-07-40/: manifest.json
captures/session_2026-01-19_22-11-14/: manifest.json
captures/session_2026-01-19_22-12-36/: manifest.json
captures/session_2026-01-19_22-13-12/: 001_POST_kalshi_orders.json  manifest.json
captures/session_2026-01-19_22-14-44/: 001_POST_kalshi_orders.json  manifest.json
controller/: Cargo.toml  README.md  kalshi_team_cache.json
controller/doc/: 04-configuration.md  06-troubleshooting.md
controller/docs/: ATOMIC_ORDERBOOK.md  CONFIRMATION_TUI.md  EXECUTION.md  ORDERBOOK_DEPTH.md  PAIRING_DEBUG_PLAYBOOK.md  REMOTE_TRADING.md
controller/src/: arb.rs  cache.rs  circuit_breaker.rs  config.rs  confirm_log.rs  confirm_queue.rs  confirm_tui.rs  debug_socket.rs  discovery.rs  execution.rs  kalshi.rs  lib.rs  main.rs  paths.rs  poly_executor.rs  polymarket.rs  polymarket_clob.rs  position_tracker.rs  remote_execution.rs  remote_protocol.rs  remote_trader.rs  strategy.rs  strategy_tracker.rs  types.rs
controller/tests/: confirm_mode_test.rs  hybrid_executor_tests.rs  integration_tests.rs  replay_harness_tests.rs
debug_web/: Cargo.toml
debug_web/src/: main.rs
debug_web/static/: app.js  index.html
docs/: LATENCY.md
docs/guides/: capture-polymarket-fixtures.md
docs/plans/: 2026-01-14-tailscale-discovery-design.md  (+18 more)
monitor/: Cargo.toml
monitor/src/: main.rs
monitor/static/: app.js  index.html  markets.js  positions.html  positions.js  styles.css
src/: config.rs  discovery.rs  kalshi.rs  main.rs  polymarket.rs
tailscale/: Cargo.toml
tailscale/src/: beacon.rs
tests/: integration_tests.rs
trader/: Cargo.toml  README.md
trader/src/: config.rs  (+7 more)
trading/: Cargo.toml
trading/src/: capture.rs  lib.rs
trading/src/execution/: leg.rs  mod.rs  types.rs
trading/src/kalshi/: client.rs  config.rs  mod.rs  types.rs
trading/src/polymarket/: client.rs  mod.rs  types.rs
(+42 files in other folders)
