[package]
name = "trading"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
ethers = { version = "2", features = ["legacy"] }
rsa = "0.9"
pkcs1 = "0.7"
arrayvec = "0.7"
